.workshop/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spawner
  annotations:
    homeroom/title: "Kubernetes and Openshift for JS Developers"
    homeroom/description: "A hands-on intro to Kubernetes and OpenShift for JS developers."
spec:
  rules:
  - host: "lab-k8s-for-js.${CLUSTER_SUBDOMAIN}"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: spawner
          servicePort: 8080
